--- a/card.css
+++ b/card.css
@@ -4,40 +4,42 @@
 body {
     padding: 0;
     margin: 0;
+    height: 100vh;
     background-color: #17141d;
     color: white;
     font-family: 'DM Mono', monospace;
+    background-image: 
+        linear-gradient(rgba(0, 0, 0, 0.05) 2.5px, transparent 3px),
+        linear-gradient(90deg, rgba(0, 0, 0, 0.05) 2.5px, transparent 3px),
+        radial-gradient(circle at 48.7% 44.3%, rgb(30, 144, 231) 0%, rgb(56, 113, 209) 22.9%, rgb(38, 76, 140) 76.7%, rgb(31, 63, 116) 100.2%);
+    background-size: 
+        40px 40px,
+        40px 40px,
+        cover;
 }
-
 
 .card-list {
     display: flex;
+    height: 100vh;
     padding: 3rem;
     flex-direction: column;
-    /* overflow-x: scroll; */
     overflow-y: scroll;
     overflow: hidden;
     align-items: center;
 }
-
 
 ::-webkit-scrollbar {
     width: 10px;
     height: 10px;
 }
 ::-webkit-scrollbar-thumb {
-    background: #201c29;
+    background: rgb(18, 37, 67);
     border-radius: 10px;
-    box-shadow: inset 2px 2px 2px hsla(0,0%,100%,.25), inset -2px -2px 2px rgba(0,0,0,.25);
+    box-shadow: inset 2px 2px 2px hsla(0, 0%, 90%, 0.2), inset -2px -2px 2px rgba(0,0,0,.20);
 }
-
-
 ::-webkit-scrollbar-track {
-    background: linear-gradient(90deg,#201c29,#201c29 1px,#17141d 0,#17141d);
+    background: linear-gradient(90deg,rgb(18, 37, 67),rgb(18, 37, 67) 1px,rgb(11, 25, 46) 0,rgb(11, 25, 46));
 }
-
-
-
 
 .card {
     display: flex;
@@ -49,32 +51,26 @@ body {
     padding: 1.5rem;
 
     border-radius: 16px;
-    background: #17141d;
-    box-shadow: 0 0 2rem #000;
+    background: rgb(18, 37, 67);
+    box-shadow: 0 0 2rem rgb(0, 0, 0, 0.7);
 
     transition: .3s;
     transition-timing-function: ease;
 }
-
 
 .card:hover {
     /* transform: translateY(-5rem); */
     scale: 1.07;
 }
 
-
 .card:hover~.card {
-    transform: translateY(330px);
+    transform: translateY(30vh);
 }
-
-
-
 
 .card:not(:first-child) {
     /* margin-left: -130px; */
-    margin-top: -300px;
+    margin-top: -30vh;
 }
-
 
 .card-author {
     position: relative;
@@ -83,7 +79,6 @@ body {
     align-items: center;
     margin: 3rem 0 0;
 }
-
 
 .author-avatar img {
     display: block;
@@ -94,27 +89,12 @@ body {
     margin: 16px 10px;
 }
 
-
-.half-circle {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 60px;
-    height: 48px;
-    fill: none;
-    stroke: #ff8a00;
-    stroke-width: 8;
-    stroke-linecap: round;
-}
-
-
 .tags {
     margin: 1rem 0 2rem;
     padding: .5rem 0 1rem;
     line-height: 2;
     margin-bottom: 0;
 }
-
 
 .tags a {
     font-style: normal;
@@ -129,13 +109,13 @@ body {
     position: relative;
 }
 
-
 .tags a:hover {
     background: linear-gradient(90deg,#ff8a00,#e52e71);
     text-shadow: none;
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
     -webkit-box-decoration-break: clone;
+    box-decoration-break: clone;
     background-clip: text;
     border-color: white;
 }
