--- a/card.css
+++ b/card.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Mono:wght@300;400;500&display=swap');
-
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css);
 
 body {
     padding: 0;
     margin: 0;
-    height: 100vh;
+    /* height: 100vh; */
     background-color: #17141d;
     color: white;
     font-family: 'DM Mono', monospace;
@@ -98,24 +98,24 @@ body {
 
 .tags a {
     font-style: normal;
-    font-weight: 700;
+    font-weight: 500;
     font-size: .5rem;
-    color: #7a7a8c;
+    color: #ffffff;
     text-transform: uppercase;
     font-size: .66rem;
-    border: 3px solid #28242f;
+    border: 2px solid #ffffff;
     border-radius: 2rem;
     padding: .2rem .85rem .25rem;
     position: relative;
 }
 
 .tags a:hover {
-    background: linear-gradient(90deg,#ff8a00,#e52e71);
+    background: linear-gradient(315deg,rgb(30, 144, 231),rgb(103, 184, 246));
     text-shadow: none;
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
     -webkit-box-decoration-break: clone;
     box-decoration-break: clone;
     background-clip: text;
-    border-color: white;
+    border-color: rgb(71, 160, 228);
 }
