--- a/card.css
+++ b/card.css
@@ -64,39 +64,66 @@ body {
 }
 
 .card:hover~.card {
-    transform: translateY(30vh);
+    transform: translateY(37vh);
 }
 
 .card:not(:first-child) {
     /* margin-left: -130px; */
-    margin-top: -30vh;
+    margin-top: -35vh;
 }
 
-.card-author {
+.flextwo { flex: 2; }
+.flexfour { flex: 4; }
+.flexone { flex: 1; }
+
+.truthlie-container {
+    display: flex;
     position: relative;
-    display: grid;
-    grid-template-columns: 75px 1fr;
-    align-items: center;
-    margin: 3rem 0 0;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+    margin: 8px;
 }
 
-.author-avatar img {
-    display: block;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    filter: grayscale(100%);
-    margin: 16px 10px;
+.truthlie-container button {
+    background-color: transparent;
+    border: 2px solid #ffffff;
+    border-radius: 10px;
+    color: #fff;
+    line-height: 1.5;
+    font-family: 'DM Mono';
+
+    transition: .2s;
+    transition-timing-function: ease;
 }
+
+.truthlie-container button:hover {
+    scale: 1.01;
+    background-color: rgb(255, 255, 255, 0.05);
+}
+
+/* .truth:active {
+    border-color: #ffffff;
+    background-color: #81C784 !important;
+    text-shadow: 2px 2px 2px rgb(0,0,0,0.5);
+} */
+
+/* .lie:active {
+    border-color: #ffffff;
+    background-color: #E57373 !important;
+    text-shadow: 2px 2px 2px rgb(0,0,0,0.5);
+} */
 
 .tags {
-    margin: 1rem 0 2rem;
-    padding: .5rem 0 1rem;
-    line-height: 2;
-    margin-bottom: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+    align-content: flex-end;
 }
 
 .tags a {
+    height: 0.8rem;
     font-style: normal;
     font-weight: 500;
     font-size: .5rem;
@@ -104,9 +131,11 @@ body {
     text-transform: uppercase;
     font-size: .66rem;
     border: 2px solid #ffffff;
-    border-radius: 2rem;
+    border-radius: 8px;
     padding: .2rem .85rem .25rem;
     position: relative;
+    transition: .2s;
+    transition-timing-function: ease;
 }
 
 .tags a:hover {
